<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoneyMobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_accueil">Accueil</string>
    <string name="title_activity_envoyer_argent">Envoyer d\'Argent</string>
    <string name="title_activity_gerer_mon_compte">Mon Compte</string>

    <!-- Todo Detail Page -->
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <!-- Add New Todo Dialog -->
    <string name="add_new_todo">Add New Todo</string>
    <string name="refresh">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Connexion</string>
    <string name="inscription">Inscription</string>

    <!-- Accueil Strings -->
    <string name="envoyer_argent">Envoyer de l\'argent</string>
    <string name="demander_argent">Demander de l\'argent</string>
    <string name="accepter_argent">Accepter de l\'argent</string>
    <string name="gerer_compte">Gérer mon compte</string>
    <string name="historique">Historique</string>
    <string name="gerer_pseudo">Gérer mon pseudonyme</string>
    <string name="coopter_ami">Coopter un ami</string>
    <string name="aide">Aide</string>
    <string name="deconnexion">Déconnexion</string>

    <!-- Gérer compte -->
    <string name="accueil_compte">Bonjour et bienvenu sur votre compte</string>
    <string name="recharger_compte">Recharger</string>
    <string name="virer_argent">Virer</string>
    <string name="menu_accueil">Menu d\'accueil</string>

    <!-- Envoyer de l'argent -->
    <string name="montant">Montant</string>

    <!-- Recharger compte -->
    <string name="recharger_20euro">20 Euros</string>
    <string name="recharger_40euro">40 Euros</string>
    <string name="recharger_60euro">60 Euros</string>
    <string name="recharger_80euro">80 Euros</string>
    <string name="recharger_100euro">100 Euros</string>

    <!-- Inscription -->
    <string name="valider">Valider</string>
    <string name="phone">Téléphone</string>
    <string name="title_activity_demander_argent">Demander de l\'Argent</string>
    <string name="title_activity_accepter_argent">Accepter de l\'Argent</string>
    <string name="title_activity_historique">Historique</string>
    <string name="title_activity_gerer_mon_pseudo">Mes Informations</string>
    <string name="title_activity_coopter_un_ami">Coopter Un Ami</string>
    <string name="title_activity_aide">Aide</string>
    <string name="title_activity_deconnexion">A Bientôt !</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_recharger_compte">RechargerCompteActivity</string>
    <string name="title_activity_recharger_solde">RechargerSoldeActivity</string>
    <string name="title_activity_confirmer_recharge">ConfirmerRechargeActivity</string>
    <string name="title_activity_nouveau_solde">NouveauSoldeActivity</string>
    <string name="title_activity_confirmer_virement">ConfirmerVirementActivity</string>
    <string name="title_activity_recharger_compte_confirmation">RechargerCompteConfirmationActivity</string>
    <string name="title_activity_solde_compte">SoldeCompteActivity</string>
    <string name="title_activity_valider_recharge_compte">ValiderRechargeCompteActivity</string>

</resources>
