<!-- RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccueilActivity" -->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:orientation="vertical"
	android:background="#011275">

	<Button
	            android:text="@string/envoyer_argent"
	            android:id="@+id/envoyer_argent"
		android:layout_height="wrap_content"
	            android:layout_width="193dp"
		android:layout_weight="0.16"
		android:background="#fefdfd">
	    </Button>
	     <Button
	            android:text="@string/demander_argent"
	            android:id="@+id/demander_argent"
			 android:layout_height="wrap_content"
	            android:layout_width="193dp"
	            android:background="#fefdfd"
			 android:layout_gravity="right">
	    </Button>
	    <Button
	            android:text="@string/accepter_argent"
	            android:id="@+id/accepter_argent"
			android:layout_height="wrap_content"
	            android:layout_width="193dp"
	            android:background="#fefdfd">
	    </Button>
	     <Button
	            android:text="@string/gerer_compte"
	            android:id="@+id/gerer_compte"
			 android:layout_height="wrap_content"
	            android:layout_width="193dp"
	            android:background="#fefdfd"
			 android:layout_weight="0.18"
			 android:layout_gravity="right">
	    </Button>
	     <Button
	            android:text="@string/historique"
	            android:id="@+id/historique"
			 android:layout_height="wrap_content"
	            android:layout_width="193dp"
	            android:background="#fefdfd">
	    </Button>
	     <Button
	            android:text="@string/gerer_pseudo"
	            android:id="@+id/gerer_pseudo"
	            android:layout_weight="0.01"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:background="#fefdfd"
			 android:layout_gravity="right">
	    </Button>
	    
	     <Button
	            android:text="@string/coopter_ami"
	            android:id="@+id/coopter_ami"
	            android:layout_weight="0.01"
	            android:layout_height="wrap_content"
	            android:layout_width="193dp"
	            android:background="#fefdfd">
	    </Button>

	<Button
	            android:text="@string/deconnexion"
	            android:id="@+id/deconnexion"
	            android:layout_weight="0.13"
	            android:layout_height="wrap_content"
	            android:layout_width="129dp"
		android:layout_gravity="center_horizontal">
	    </Button>

	<Button
            android:text="@string/aide"
            android:id="@+id/aide"
            android:layout_weight="0.01"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
		android:layout_gravity="center_horizontal">
    </Button>

</LinearLayout>
