<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="#00802b">

    <TextView
        android:id="@+id/message_accueil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <Button
        android:text="@string/valider"
        android:id="@+id/valider"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <Button
        android:text="@string/gerer_compte"
        android:id="@+id/gerer_compte"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

	<Button
        android:text="@string/menu_accueil"
        android:id="@+id/back_menu_accueil"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <Button
        android:text="@string/deconnexion"
        android:id="@+id/deconnexion"
        android:layout_height="wrap_content"
        android:layout_width="131dp"/>

</LinearLayout>